tests/paczka1/fuzzy1/35885956.err
Error in line 4: 7hnfBAWn4f S249 94,5
Error in line 2: jboEgYeJz S6 4,9
Error in line 36: lE6pXF S529 58,5
